# tsw-optimal-dps

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
Guide/: intro.bb
TswDps/: Abilities-VDM.tsv  Augment.hh  Augments-VDM.tsv  Augments.hh  Build.cc  Build.hh  Builds.hh  CombatLog.cc  CombatLog.hh  Effect.hh  Effects.hh  EnemyInfo.hh  Gear.cc  Gear.hh  Optimizer.cc  Optimizer.hh  Passive.hh  Passives.cc  Passives.hh  Potions.hh  Rotation.cc  Rotation.hh  Scenario.hh  Signet.hh  Signets.hh  Simulation.cc  Simulation.hh  Skill Scaling - Scalings.tsv  Skill.hh  SkillTable.cc  SkillTable.hh  Skills.cc  Skills.hh  Skillset.hh  Stats.cc  Stats.hh  TswDps.pro  Types.hh  Weapon.hh  common.hh  (+3 more)
TswDps/results/: builds-post.txt  summary-best.csv  summary-burst.csv  summary-dummy.csv  summary.csv
TswDps/results/best/: Blood-Blade.json  Blood-Blade.json.bb  Blood-Fist.json  Blood-Fist.json.bb  Blood-Hammer.json  Blood-Hammer.json.bb  Chaos-Blade.json  Chaos-Blade.json.bb  Chaos-Blood.json  Chaos-Blood.json.bb  Chaos-Fist.json  Chaos-Fist.json.bb  Chaos-Hammer.json  Chaos-Hammer.json.bb  Elemental-Blade.json  Elemental-Blade.json.bb  Elemental-Blood.json  Elemental-Blood.json.bb  Elemental-Chaos.json  Elemental-Chaos.json.bb  Elemental-Fist.json  Elemental-Fist.json.bb  Elemental-Hammer.json  Elemental-Hammer.json.bb  Fist-Blade.json  Fist-Blade.json.bb  Hammer-Blade.json  Hammer-Blade.json.bb  Hammer-Fist.json  Hammer-Fist.json.bb  Pistol-Blade.json  Pistol-Blade.json.bb  Pistol-Blood.json  Pistol-Blood.json.bb  Pistol-Chaos.json  Pistol-Chaos.json.bb  Pistol-Elemental-sav.json  Pistol-Elemental.json  Pistol-Elemental.json.bb  Pistol-Fist.json  (+33 more)
TswDps/results/burst/: Blood-Blade.json  Blood-Fist.json  Blood-Hammer.json  Chaos-Blade.json  Chaos-Blood.json  Chaos-Fist.json  Chaos-Hammer.json  Elemental-Blade.json  Elemental-Blood.json  Elemental-Chaos.json  Elemental-Fist.json  Elemental-Hammer.json  Fist-Blade.json  Hammer-Blade.json  Hammer-Fist.json  Pistol-Blade.json  Pistol-Blood.json  Pistol-Chaos.json  Pistol-Elemental.json  Pistol-Fist.json  Pistol-Hammer.json  Pistol-Rifle.json  Rifle-Blade.json  Rifle-Blood.json  Rifle-Chaos.json  Rifle-Elemental.json  Rifle-Fist.json  Rifle-Hammer.json  Shotgun-Blade.json  Shotgun-Blood.json  Shotgun-Chaos.json  Shotgun-Elemental.json  Shotgun-Fist.json  Shotgun-Hammer.json  Shotgun-Pistol.json  Shotgun-Rifle.json
TswDps/results/dummy/: Blood-Blade.json  Blood-Fist.json  Blood-Hammer.json  Chaos-Blade.json  Chaos-Blood.json  Chaos-Fist.json  Chaos-Hammer.json  Elemental-Blade.json  Elemental-Blood.json  Elemental-Chaos.json  Elemental-Fist.json  Elemental-Hammer.json  Fist-Blade.json  Hammer-Blade.json  Hammer-Fist.json  Pistol-Blade.json  Pistol-Blood.json  Pistol-Chaos.json  Pistol-Elemental.json  Pistol-Fist.json  Pistol-Hammer.json  Pistol-Rifle.json  Rifle-Blade.json  Rifle-Blood.json  Rifle-Chaos.json  Rifle-Elemental.json  Rifle-Fist.json  Rifle-Hammer.json  Shotgun-Blade.json  (+7 more)
TswDps/tests/: test-active-tokens.cc  test-fixed-dps.cc  test-manifestation-stats.cc  test-no-self-mercurial.cc  test-procs.cc  test-variance.cc  test-vdm.cc
(+320 files in other folders)
